@@ -10,6 +10,7 @@ Akeeba Panopticon 1.1.0
 ~ Running `composer install` will now always create the `version.php` file
 ~ Don't show backup and scanner scheduling buttons unless corresponding software installed [gh-413]
 # [HIGH] The minified Dashboard JavaScript was broken [gh-408]
+# [MEDIUM] Sending emails with the default language results in untranslated variables
 # [LOW] PHP error when the browser returns invalid data during WebAuthn [gh-406]
 # [LOW] TinyMCE content always dark [gh-410]
 # [LOW] Backup not Pro when extension not installed [gh-414]
